--- a/MatchingMakingMonitor/MatchMakingMonitor.csproj
+++ b/MatchingMakingMonitor/MatchMakingMonitor.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5731B626-BC65-477B-BEA7-3A5163B306AE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MatchingMakingMonitor</RootNamespace>
-    <AssemblyName>MatchingMakingMonitor</AssemblyName>
+    <AssemblyName>MatchMakingMonitor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
