--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -22,6 +22,33 @@
             <setting name="Region" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Overall9" serializeAs="String">
+                <value>184,0,169</value>
+            </setting>
+            <setting name="Overall8" serializeAs="String">
+                <value>0,148,17</value>
+            </setting>
+            <setting name="Overall7" serializeAs="String">
+                <value>106,188,0</value>
+            </setting>
+            <setting name="Overall6" serializeAs="String">
+                <value>155,188,0</value>
+            </setting>
+            <setting name="Overall5" serializeAs="String">
+                <value>188,181,0</value>
+            </setting>
+            <setting name="Overall4" serializeAs="String">
+                <value>255,174,0</value>
+            </setting>
+            <setting name="Overall3" serializeAs="String">
+                <value>255,114,0</value>
+            </setting>
+            <setting name="Overall2" serializeAs="String">
+                <value>255,66,0</value>
+            </setting>
+            <setting name="Overall1" serializeAs="String">
+                <value>255, 0, 0</value>
+            </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </userSettings>
     <applicationSettings>
