--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -23,31 +23,34 @@
                 <value />
             </setting>
             <setting name="Overall9" serializeAs="String">
-                <value>184,0,169</value>
+                <value>64,16,112</value>
             </setting>
             <setting name="Overall8" serializeAs="String">
-                <value>0,148,17</value>
+                <value>121,61,182</value>
             </setting>
             <setting name="Overall7" serializeAs="String">
-                <value>106,188,0</value>
+                <value>57,114,198</value>
             </setting>
             <setting name="Overall6" serializeAs="String">
-                <value>155,188,0</value>
+                <value>64,153,191</value>
             </setting>
             <setting name="Overall5" serializeAs="String">
-                <value>188,181,0</value>
+                <value>77,115,38</value>
             </setting>
             <setting name="Overall4" serializeAs="String">
-                <value>255,174,0</value>
+                <value>204,184,0</value>
             </setting>
             <setting name="Overall3" serializeAs="String">
-                <value>255,114,0</value>
+                <value>204,122,0</value>
             </setting>
             <setting name="Overall2" serializeAs="String">
-                <value>255,66,0</value>
+                <value>205,51,51</value>
             </setting>
             <setting name="Overall1" serializeAs="String">
-                <value>255, 0, 0</value>
+                <value>147,13,13</value>
+            </setting>
+            <setting name="FontSize" serializeAs="String">
+                <value>12</value>
             </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </userSettings>
