--- a/MatchingMakingMonitor/Properties/Settings.settings
+++ b/MatchingMakingMonitor/Properties/Settings.settings
@@ -24,31 +24,34 @@
       <Value Profile="(Default)">a7079ba49e5487b6936aed9176c13968</Value>
     </Setting>
     <Setting Name="Overall9" Type="System.String" Scope="User">
-      <Value Profile="(Default)">184,0,169</Value>
+      <Value Profile="(Default)">64,16,112</Value>
     </Setting>
     <Setting Name="Overall8" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0,148,17</Value>
+      <Value Profile="(Default)">121,61,182</Value>
     </Setting>
     <Setting Name="Overall7" Type="System.String" Scope="User">
-      <Value Profile="(Default)">106,188,0</Value>
+      <Value Profile="(Default)">57,114,198</Value>
     </Setting>
     <Setting Name="Overall6" Type="System.String" Scope="User">
-      <Value Profile="(Default)">155,188,0</Value>
+      <Value Profile="(Default)">64,153,191</Value>
     </Setting>
     <Setting Name="Overall5" Type="System.String" Scope="User">
-      <Value Profile="(Default)">188,181,0</Value>
+      <Value Profile="(Default)">77,115,38</Value>
     </Setting>
     <Setting Name="Overall4" Type="System.String" Scope="User">
-      <Value Profile="(Default)">255,174,0</Value>
+      <Value Profile="(Default)">204,184,0</Value>
     </Setting>
     <Setting Name="Overall3" Type="System.String" Scope="User">
-      <Value Profile="(Default)">255,114,0</Value>
+      <Value Profile="(Default)">204,122,0</Value>
     </Setting>
     <Setting Name="Overall2" Type="System.String" Scope="User">
-      <Value Profile="(Default)">255,66,0</Value>
+      <Value Profile="(Default)">205,51,51</Value>
     </Setting>
     <Setting Name="Overall1" Type="System.String" Scope="User">
-      <Value Profile="(Default)">255, 0, 0</Value>
+      <Value Profile="(Default)">147,13,13</Value>
+    </Setting>
+    <Setting Name="FontSize" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">12</Value>
     </Setting>
   </Settings>
 </SettingsFile>
