* Added ViewModels * Added IocContainer * Added Services * Added SocketIO * Updated Newtonsoft * Moved logic from SettingsWindow to SettingsWindowViewModel

--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="MatchingMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="MatchingMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -23,34 +23,37 @@
                 <value />
             </setting>
             <setting name="Overall9" serializeAs="String">
-                <value>64,16,112</value>
+                <value>#401070</value>
             </setting>
             <setting name="Overall8" serializeAs="String">
-                <value>121,61,182</value>
+                <value>#793db6</value>
             </setting>
             <setting name="Overall7" serializeAs="String">
-                <value>57,114,198</value>
+                <value>#3972c6</value>
             </setting>
             <setting name="Overall6" serializeAs="String">
-                <value>64,153,191</value>
+                <value>#4099bf</value>
             </setting>
             <setting name="Overall5" serializeAs="String">
-                <value>77,115,38</value>
+                <value>#4d7326</value>
             </setting>
             <setting name="Overall4" serializeAs="String">
-                <value>204,184,0</value>
+                <value>#ccb800</value>
             </setting>
             <setting name="Overall3" serializeAs="String">
-                <value>204,122,0</value>
+                <value>#cc7a00</value>
             </setting>
             <setting name="Overall2" serializeAs="String">
-                <value>205,51,51</value>
+                <value>#cd3333</value>
             </setting>
             <setting name="Overall1" serializeAs="String">
-                <value>147,13,13</value>
+                <value>#930d0d</value>
             </setting>
             <setting name="FontSize" serializeAs="String">
                 <value>12</value>
+            </setting>
+            <setting name="Token" serializeAs="String">
+                <value />
             </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </userSettings>
@@ -70,4 +73,12 @@
             </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
