* Added ApiService * Added StatsService * Added new fetching logic * Changed RestClient to HttpClient for more simple async request

--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -59,7 +59,7 @@
     </userSettings>
     <applicationSettings>
         <MatchingMakingMonitor.Properties.Settings>
-            <setting name="AppId" serializeAs="String">
+            <setting name="AppIdNA" serializeAs="String">
                 <value>04c8800d343d496e7ae9c94ba6e51a0b</value>
             </setting>
             <setting name="AppIdEU" serializeAs="String">
@@ -70,6 +70,18 @@
             </setting>
             <setting name="AppIdSEA" serializeAs="String">
                 <value>a7079ba49e5487b6936aed9176c13968</value>
+            </setting>
+            <setting name="BaseUrlNA" serializeAs="String">
+                <value>https://api.worldofwarships.com</value>
+            </setting>
+            <setting name="BaseUrlEU" serializeAs="String">
+                <value>https://api.worldofwarships.eu</value>
+            </setting>
+            <setting name="BaseUrlRU" serializeAs="String">
+                <value>https://api.worldofwarships.ru</value>
+            </setting>
+            <setting name="BaseUrlSEA" serializeAs="String">
+                <value>https://api.worldofwarships.asia</value>
             </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </applicationSettings>
