* Changed class names * Added stats ui in xaml * Some other changes

--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -16,11 +16,8 @@
             <setting name="InstallDirectory" serializeAs="String">
                 <value>C:\Games\World_of_Warships</value>
             </setting>
-            <setting name="LastReplay" serializeAs="String">
-                <value />
-            </setting>
             <setting name="Region" serializeAs="String">
-                <value />
+                <value>NA</value>
             </setting>
             <setting name="Overall9" serializeAs="String">
                 <value>#401070</value>
