--- a/MatchingMakingMonitor/Properties/Settings.settings
+++ b/MatchingMakingMonitor/Properties/Settings.settings
@@ -8,11 +8,8 @@
     <Setting Name="AppIdNA" Type="System.String" Scope="Application">
       <Value Profile="(Default)">04c8800d343d496e7ae9c94ba6e51a0b</Value>
     </Setting>
-    <Setting Name="LastReplay" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
     <Setting Name="Region" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">NA</Value>
     </Setting>
     <Setting Name="AppIdEU" Type="System.String" Scope="Application">
       <Value Profile="(Default)">8c4616d4f59f9e915d214c514f7661f2</Value>
