--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -19,31 +19,31 @@
             <setting name="Region" serializeAs="String">
                 <value>NA</value>
             </setting>
-            <setting name="Overall9" serializeAs="String">
+            <setting name="Color9" serializeAs="String">
                 <value>#401070</value>
             </setting>
-            <setting name="Overall8" serializeAs="String">
+            <setting name="Color8" serializeAs="String">
                 <value>#793db6</value>
             </setting>
-            <setting name="Overall7" serializeAs="String">
+            <setting name="Color7" serializeAs="String">
                 <value>#3972c6</value>
             </setting>
-            <setting name="Overall6" serializeAs="String">
+            <setting name="Color6" serializeAs="String">
                 <value>#4099bf</value>
             </setting>
-            <setting name="Overall5" serializeAs="String">
+            <setting name="Color5" serializeAs="String">
                 <value>#4d7326</value>
             </setting>
-            <setting name="Overall4" serializeAs="String">
+            <setting name="Color4" serializeAs="String">
                 <value>#ccb800</value>
             </setting>
-            <setting name="Overall3" serializeAs="String">
+            <setting name="Color3" serializeAs="String">
                 <value>#cc7a00</value>
             </setting>
-            <setting name="Overall2" serializeAs="String">
+            <setting name="Color2" serializeAs="String">
                 <value>#cd3333</value>
             </setting>
-            <setting name="Overall1" serializeAs="String">
+            <setting name="Color1" serializeAs="String">
                 <value>#930d0d</value>
             </setting>
             <setting name="FontSize" serializeAs="String">
@@ -51,6 +51,21 @@
             </setting>
             <setting name="Token" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="BattleLimits" serializeAs="String">
+                <value>150; 100; 80; 60; 40; 30; 20; 10; 0</value>
+            </setting>
+            <setting name="WinLimits" serializeAs="String">
+                <value>90; 80; 70; 60; 50; 40; 30; 20; 0</value>
+            </setting>
+            <setting name="FragsLimits" serializeAs="String">
+                <value>1,5; 1,3; 1,1; 1,0; 0,8; 0,6; 0,4; 0,2; 0</value>
+            </setting>
+            <setting name="XpLimits" serializeAs="String">
+                <value>1500; 1200; 1000; 900; 800; 600; 500; 400; 0</value>
+            </setting>
+            <setting name="DmgLimits" serializeAs="String">
+                <value>75000; 65000; 55000; 45000; 35000; 25000; 15000; 10000; 0</value>
             </setting>
         </MatchingMakingMonitor.Properties.Settings>
     </userSettings>
