* Corrected NameSpace * Added weights to settings

--- a/MatchingMakingMonitor/App.config
+++ b/MatchingMakingMonitor/App.config
@@ -2,17 +2,17 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="MatchingMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="MatchMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="MatchingMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="MatchMakingMonitor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
-        <MatchingMakingMonitor.Properties.Settings>
+        <MatchMakingMonitor.Properties.Settings>
             <setting name="InstallDirectory" serializeAs="String">
                 <value>C:\Games\World_of_Warships</value>
             </setting>
@@ -67,10 +67,25 @@
             <setting name="DmgLimits" serializeAs="String">
                 <value>75000; 65000; 55000; 45000; 35000; 25000; 15000; 10000; 0</value>
             </setting>
-        </MatchingMakingMonitor.Properties.Settings>
+            <setting name="BattleWeight" serializeAs="String">
+                <value>1.2</value>
+            </setting>
+            <setting name="FragsWeight" serializeAs="String">
+                <value>1.1</value>
+            </setting>
+            <setting name="XpWeight" serializeAs="String">
+                <value>0.8</value>
+            </setting>
+            <setting name="DmgWeight" serializeAs="String">
+                <value>0.9</value>
+            </setting>
+            <setting name="WinWeight" serializeAs="String">
+                <value>1</value>
+            </setting>
+        </MatchMakingMonitor.Properties.Settings>
     </userSettings>
     <applicationSettings>
-        <MatchingMakingMonitor.Properties.Settings>
+        <MatchMakingMonitor.Properties.Settings>
             <setting name="AppIdNA" serializeAs="String">
                 <value>04c8800d343d496e7ae9c94ba6e51a0b</value>
             </setting>
@@ -95,7 +110,7 @@
             <setting name="BaseUrlSEA" serializeAs="String">
                 <value>https://api.worldofwarships.asia</value>
             </setting>
-        </MatchingMakingMonitor.Properties.Settings>
+        </MatchMakingMonitor.Properties.Settings>
     </applicationSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
