--- a/MatchingMakingMonitor/App.Release.config
+++ b/MatchingMakingMonitor/App.Release.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+<configuration>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
 	</startup>
