--- a/MatchingMakingMonitor/MatchMakingMonitor.csproj
+++ b/MatchingMakingMonitor/MatchMakingMonitor.csproj
@@ -35,15 +35,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>true</Prefer32Bit>
-		<AppConfig>App.Release.config</AppConfig>
-		<PreBuildEvent>
+    <AppConfig>App.Release.config</AppConfig>
+    <PreBuildEvent>
 		  cd $(TargetDir)
 		  del log.txt
 		  del *.config
 		  RD /S /Q "$(TargetDir)config"
 		  RD /S /Q "$(TargetDir)bin"
 	  </PreBuildEvent>
-	  <PostBuildEvent>
+    <PostBuildEvent>
 		  cd $(TargetDir)
 		  del *.xml
 
@@ -142,17 +142,17 @@
     <Compile Include="Models\MobileDisplayPlayerStats.cs" />
     <Compile Include="Models\MobileSettings.cs" />
     <Compile Include="Models\PlayerShip.cs" />
-    <Compile Include="Models\Replay\Vehicle.cs" />
-    <Compile Include="Models\ResponseTypes\Aircraft.cs" />
-    <Compile Include="Models\ResponseTypes\Data.cs" />
-    <Compile Include="Models\ResponseTypes\MainBattery.cs" />
-    <Compile Include="Models\ResponseTypes\Meta.cs" />
-    <Compile Include="Models\ResponseTypes\Pvp.cs" />
-    <Compile Include="Models\ResponseTypes\Ramming.cs" />
-    <Compile Include="Models\ResponseTypes\SecondBattery.cs" />
-    <Compile Include="Models\ResponseTypes\Ship.cs" />
-    <Compile Include="Models\ResponseTypes\Torpedoes.cs" />
-    <Compile Include="Models\ResponseTypes\WargamingPlayer.cs" />
+    <Compile Include="Models\Replay\ReplayVehicle.cs" />
+    <Compile Include="Models\ResponseTypes\WgPlayerShipsStatsData.cs" />
+    <Compile Include="Models\ResponseTypes\WgShip.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsAircraft.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsMainBattery.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsPvp.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsRamming.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsSecondBattery.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsShip.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsTorpedoes.cs" />
+    <Compile Include="Models\ResponseTypes\WgStatsPlayer.cs" />
     <Compile Include="QrCodeWindow.xaml.cs">
       <DependentUpon>QrCodeWindow.xaml</DependentUpon>
     </Compile>
@@ -200,10 +200,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ResponseTypes\PlayerStats.cs" />
+    <Compile Include="Models\ResponseTypes\WgPlayerShipsStatsResult.cs" />
     <Compile Include="Models\Replay\Replay.cs" />
-    <Compile Include="Models\ShipInfo.cs" />
-    <Compile Include="Models\ResponseTypes\WargamingSearch.cs" />
+    <Compile Include="Models\ResponseTypes\WgShipResponse.cs" />
+    <Compile Include="Models\ResponseTypes\WgPlayerSearchResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -221,9 +221,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-		<None Include="App.Release.config">
-			<DependentUpon>App.config</DependentUpon>
-		</None>
+    <None Include="App.Release.config">
+      <DependentUpon>App.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\gearIcon.png" />
